--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,43 @@ canvas {
   gap: 5px;
   cursor: pointer;
 }
+
+.container-braz {
+  text-align: center;
+  padding: 20px;
+}
+
+.linkedin-image {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-bottom: 5px;
+}
+
+.github-image {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-bottom: 5px;
+}
+
+.name {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.job-title {
+  font-size: 16px;
+  margin-bottom: 40px;
+  font-weight: bold;
+  color: #0077b5;
+  text-decoration: none;
+  text-decoration: underline;
+}
+
+.infoadd {
+  font-size: 12px;
+  font-weight: italic;
+  color: #fb2a00;
+}
