--- a/css/style.css
+++ b/css/style.css
@@ -93,14 +93,14 @@ canvas {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  margin-bottom: 5px;
+  margin-bottom: 1rem;
 }
 
 .github-image {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  margin-bottom: 5px;
+  margin-bottom: 1rem;
 }
 
 .name {
@@ -111,7 +111,7 @@ canvas {
 
 .job-title {
   font-size: 16px;
-  margin-bottom: 40px;
+  margin-bottom: 1rem;
   font-weight: bold;
   color: #0077b5;
   text-decoration: none;
